# pycomptox

./: .gitignore  README.md  pdoc_config.py  pyproject.toml  response.txt  setup.py  test  test.py  testapi.txt
.github/workflows/: python-publish.yml
docs/: index.html  pycomptox.html  search.js
docs/pycomptox/: apis.html  core.html  utils.html
docs/pycomptox/apis/: bioactivity.html  chem_details.html  chem_search.html  exposure.html  hazard.html
docs/pycomptox/core/: base_client.html  config.html
docs/pycomptox/utils/: exceptions.html  logging_utils.html
pycomptox/: __init__.py  _version.py
pycomptox/apis/: chem_search.py  exposure.py  hazard.py
pycomptox/core/: base_client.py
tests/: test_chem_search.py
