[metadata]
    version = "0.1.0"
    name = "pycomptox"
    description = "This is a lightweight wrapper for comptox APIs (for computational toxicology)"
    authors = [{name = "Kunal Chandra", email = "your.email@example.com"}]
    license = "MIT"
    readme = "README.md"
    homepage = "https://github.com/Kunal627/pycomptox"
    keywords = ["API", "wrapper", "REST", "comptox"]
    classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License",  "Operating System :: OS Independent" ]
    python_requires = ">=3.9"
    bug_tracker = "https://github.com/Kunal627/pycomptox/issues"
    documentation = "https://github.com/Kunal627/pycomptox/blob/main/README.md"
    source_code =  "https://github.com/Kunal627/pycomptox"

[build-system]
    requires = ["setuptools>=42", "wheel"]
    build-backend = "setuptools.build_meta"